--- a/sleepy_driver.ipynb
+++ b/sleepy_driver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4     16328      5298       5471               0  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "10  277382.0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        " 'highGamma']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -46188,7 +46188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -88376,7 +88376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -125808,6 +125808,140 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "attention",
+          "x": 0.225,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "meditation",
+          "x": 0.775,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "delta",
+          "x": 0.225,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.78,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "theta",
+          "x": 0.775,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.78,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowAlpha",
+          "x": 0.225,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.56,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highAlpha",
+          "x": 0.775,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.56,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowBeta",
+          "x": 0.225,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.33999999999999997,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highBeta",
+          "x": 0.775,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.33999999999999997,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowGamma",
+          "x": 0.225,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.12,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highGamma",
+          "x": 0.775,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.12,
+          "yanchor": "bottom",
+          "yref": "paper"
+         }
+        ],
+        "height": 800,
+        "showlegend": false,
         "template": {
          "data": {
           "bar": [
@@ -126624,6 +126758,7 @@
           }
          }
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -126697,7 +126832,7 @@
         "yaxis": {
          "anchor": "x",
          "domain": [
-          0.848,
+          0.88,
           1
          ]
         },
@@ -126705,63 +126840,63 @@
          "anchor": "x10",
          "domain": [
           0,
-          0.152
+          0.12
          ]
         },
         "yaxis2": {
          "anchor": "x2",
          "domain": [
-          0.848,
+          0.88,
           1
          ]
         },
         "yaxis3": {
          "anchor": "x3",
          "domain": [
-          0.6359999999999999,
-          0.7879999999999999
+          0.66,
+          0.78
          ]
         },
         "yaxis4": {
          "anchor": "x4",
          "domain": [
-          0.6359999999999999,
-          0.7879999999999999
+          0.66,
+          0.78
          ]
         },
         "yaxis5": {
          "anchor": "x5",
          "domain": [
-          0.424,
-          0.576
+          0.44,
+          0.56
          ]
         },
         "yaxis6": {
          "anchor": "x6",
          "domain": [
-          0.424,
-          0.576
+          0.44,
+          0.56
          ]
         },
         "yaxis7": {
          "anchor": "x7",
          "domain": [
-          0.212,
-          0.364
+          0.22,
+          0.33999999999999997
          ]
         },
         "yaxis8": {
          "anchor": "x8",
          "domain": [
-          0.212,
-          0.364
+          0.22,
+          0.33999999999999997
          ]
         },
         "yaxis9": {
          "anchor": "x9",
          "domain": [
           0,
-          0.152
+          0.12
          ]
         }
        }
@@ -126772,24 +126907,12 @@
     }
    ],
    "source": [
-    "'''import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "\n",
-    "fig = make_subplots(rows=4, cols=3)\n",
-    "\n",
-    "for i, col in enumerate(col_list):\n",
-    "    trace = go.Histogram(x=data[col]) \n",
-    "    fig.append_trace(trace, 1, 1)\n",
-    "\n",
-    "\n",
-    "fig.show()\n",
-    "'''\n",
-    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "fig = make_subplots(rows=5, cols=2)\n",
+    "fig = make_subplots(rows=5, cols=2, subplot_titles=col_list)\n",
     "\n",
+    "''' (Долгий способ без циклов)\n",
     "trace0 = go.Histogram(x=data[col_list[0]])\n",
     "trace1 = go.Histogram(x=data[col_list[1]])\n",
     "trace2 = go.Histogram(x=data[col_list[2]])\n",
@@ -126812,12 +126935,48 @@
     "fig.append_trace(trace8, 5, 1)\n",
     "fig.append_trace(trace9, 5, 2)\n",
     "\n",
+    "\n",
+    "fig.append_trace(go.Histogram(x=data[col_list[0]]), 1, 1)\n",
+    "fig.append_trace(go.Histogram(x=data[col_list[1]]), 1, 2)\n",
+    "fig.append_trace(go.Histogram(x=data[col_list[2]]), 2, 1)\n",
+    "fig.append_trace(trace3, 2, 2) \n",
+    "fig.append_trace(trace4, 3, 1)\n",
+    "fig.append_trace(trace5, 3, 2)\n",
+    "fig.append_trace(trace6, 4, 1)\n",
+    "fig.append_trace(trace7, 4, 2)\n",
+    "fig.append_trace(trace8, 5, 1)\n",
+    "fig.append_trace(trace9, 5, 2)\n",
+    "\n",
+    "ind = 0\n",
+    "for row in range(1, 6):\n",
+    "    for col in [1, 2]:\n",
+    "        fig.append_trace(go.Histogram(x=data[col_list[0]]), row, col)\n",
+    "        ind += 1\n",
+    "\n",
+    "\n",
+    "fig.show()\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "n_row = 5 # устанавливаем количество подграфиков в графике по вертикали\n",
+    "n_col = 2 # устанавливаем количество подграфиков в графике по горизонтали\n",
+    "fig = make_subplots(rows=n_row, cols=n_col, subplot_titles=col_list) # последний параметр настраивает название\n",
+    "\n",
+    "ind = 0\n",
+    "for row in range(1, n_row+1):\n",
+    "    for col in range(1, n_col+1):\n",
+    "        fig.append_trace(go.Histogram(x=data[col_list[ind]]), row, col)\n",
+    "        fig.update_layout(height=800, width=1300)  # указываем высоту и ширину графика\n",
+    "        fig.update_layout(showlegend=False)  # скрываем легенду\n",
+    "        ind += 1\n",
+    "\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -164249,6 +164408,140 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "attention",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "meditation",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.8950000000000001,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "delta",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.7900000000000001,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "theta",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.6850000000000002,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowAlpha",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.5800000000000001,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highAlpha",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.47500000000000003,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowBeta",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.37000000000000005,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highBeta",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.265,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "lowGamma",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.16000000000000003,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "highGamma",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.05500000000000001,
+          "yanchor": "bottom",
+          "yref": "paper"
+         }
+        ],
+        "height": 1300,
+        "showlegend": false,
         "template": {
          "data": {
           "bar": [
@@ -165065,24 +165358,25 @@
           }
          }
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
           0,
-          0.45
+          1
          ]
         },
         "xaxis10": {
          "anchor": "y10",
          "domain": [
-          0.55,
+          0,
           1
          ]
         },
         "xaxis2": {
          "anchor": "y2",
          "domain": [
-          0.55,
+          0,
           1
          ]
         },
@@ -165090,13 +165384,13 @@
          "anchor": "y3",
          "domain": [
           0,
-          0.45
+          1
          ]
         },
         "xaxis4": {
          "anchor": "y4",
          "domain": [
-          0.55,
+          0,
           1
          ]
         },
@@ -165104,13 +165398,13 @@
          "anchor": "y5",
          "domain": [
           0,
-          0.45
+          1
          ]
         },
         "xaxis6": {
          "anchor": "y6",
          "domain": [
-          0.55,
+          0,
           1
          ]
         },
@@ -165118,13 +165412,13 @@
          "anchor": "y7",
          "domain": [
           0,
-          0.45
+          1
          ]
         },
         "xaxis8": {
          "anchor": "y8",
          "domain": [
-          0.55,
+          0,
           1
          ]
         },
@@ -165132,13 +165426,13 @@
          "anchor": "y9",
          "domain": [
           0,
-          0.45
+          1
          ]
         },
         "yaxis": {
          "anchor": "x",
          "domain": [
-          0.848,
+          0.9450000000000001,
           1
          ]
         },
@@ -165146,63 +165440,63 @@
          "anchor": "x10",
          "domain": [
           0,
-          0.152
+          0.05500000000000001
          ]
         },
         "yaxis2": {
          "anchor": "x2",
          "domain": [
-          0.848,
-          1
+          0.8400000000000001,
+          0.8950000000000001
          ]
         },
         "yaxis3": {
          "anchor": "x3",
          "domain": [
-          0.6359999999999999,
-          0.7879999999999999
+          0.7350000000000001,
+          0.7900000000000001
          ]
         },
         "yaxis4": {
          "anchor": "x4",
          "domain": [
-          0.6359999999999999,
-          0.7879999999999999
+          0.6300000000000001,
+          0.6850000000000002
          ]
         },
         "yaxis5": {
          "anchor": "x5",
          "domain": [
-          0.424,
-          0.576
+          0.525,
+          0.5800000000000001
          ]
         },
         "yaxis6": {
          "anchor": "x6",
          "domain": [
-          0.424,
-          0.576
+          0.42000000000000004,
+          0.47500000000000003
          ]
         },
         "yaxis7": {
          "anchor": "x7",
          "domain": [
-          0.212,
-          0.364
+          0.31500000000000006,
+          0.37000000000000005
          ]
         },
         "yaxis8": {
          "anchor": "x8",
          "domain": [
-          0.212,
-          0.364
+          0.21000000000000002,
+          0.265
          ]
         },
         "yaxis9": {
          "anchor": "x9",
          "domain": [
-          0,
-          0.152
+          0.10500000000000001,
+          0.16000000000000003
          ]
         }
        }
@@ -165218,34 +165512,44 @@
     "\n",
     "fig = make_subplots(rows=5, cols=2)\n",
     "\n",
-    "trace0 = go.Box(x=data[col_list[0]])\n",
-    "trace1 = go.Box(x=data[col_list[1]])\n",
-    "trace2 = go.Box(x=data[col_list[2]])\n",
-    "trace3 = go.Box(x=data[col_list[3]])\n",
-    "trace4 = go.Box(x=data[col_list[4]])\n",
-    "trace5 = go.Box(x=data[col_list[5]])\n",
-    "trace6 = go.Box(x=data[col_list[6]])\n",
-    "trace7 = go.Box(x=data[col_list[7]])\n",
-    "trace8 = go.Box(x=data[col_list[8]])\n",
-    "trace9 = go.Box(x=data[col_list[9]])\n",
+    "'''\n",
+    "ind = 0\n",
     "\n",
-    "fig.append_trace(trace0, 1, 1)\n",
-    "fig.append_trace(trace1, 1, 2)\n",
-    "fig.append_trace(trace2, 2, 1)\n",
-    "fig.append_trace(trace3, 2, 2) \n",
-    "fig.append_trace(trace4, 3, 1)\n",
-    "fig.append_trace(trace5, 3, 2)\n",
-    "fig.append_trace(trace6, 4, 1)\n",
-    "fig.append_trace(trace7, 4, 2)\n",
-    "fig.append_trace(trace8, 5, 1)\n",
-    "fig.append_trace(trace9, 5, 2)\n",
     "\n",
-    "fig.show()"
+    "for row in range(1, 6):\n",
+    "    for col in [1, 2]:\n",
+    "        fig.append_trace(go.Box(x=data[col_list[ind]]), row, col)\n",
+    "        fig.update_layout(height=1500, width=1500)  # указываем высоту и ширину графика\n",
+    "        fig.update_layout(showlegend=False)  # скрываем легенду\n",
+    "        ind += 1\n",
+    "\n",
+    "fig.show()'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "n_row = 10 # устанавливаем количество подграфиков по вертикали\n",
+    "n_col = 1 # устанавливаем количество подграфиков по вертикали\n",
+    "fig = make_subplots(rows=n_row, cols=n_col, subplot_titles=col_list) # создаёт фигуру из нескольких подграфиков\n",
+    "# последний параметр настраивает название\n",
+    "\n",
+    "ind = 0 # номер элемента из списка со столбцами датафрейма (col_list)\n",
+    "# проходимся по каждому элементу каждой \"строки\" графика\n",
+    "for row in range(1, n_row+1): # проходимся по каждому элементу каждой \"строки\" графика\n",
+    "    for col in range(1, n_col+1):\n",
+    "        fig.append_trace(go.Box(x=data[col_list[ind]]), row, col) # настраиваем каждый подграфик\n",
+    "        fig.update_layout(height=1300, width=1300)  # указываем высоту и ширину графика\n",
+    "        fig.update_layout(showlegend=False)  # скрываем легенду\n",
+    "        ind += 1\n",
+    "\n",
+    "fig.show()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165262,7 +165566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
