--- a/sleepy_driver.ipynb
+++ b/sleepy_driver.ipynb
@@ -39099,6 +39099,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "P.S. если график не отображается, то копию можно посмотреть в папке plotly: https://github.com/lidarya/diplom/blob/main/plotly/1g-hi.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Посмотрим, как соотносятся средние значения каждого признака для каждой категории столбца classification (0 и 1):"
    ]
   },
@@ -40069,6 +40076,13 @@
     "    )\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P.S. если график не отображается, то копию можно посмотреть в папке plotly: https://github.com/lidarya/diplom/blob/main/plotly/2g-st.png"
    ]
   },
   {
@@ -78697,6 +78711,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "P.S. если график не отображается, то копию можно посмотреть в папке plotly: https://github.com/lidarya/diplom/blob/main/plotly/3g-b.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Поскольку мы видим, что в столбце meditation есть значения, которые могли бы быть выбросами (они выходят за границы (Q1 - 1,5IQR) или (Q3 + 1,5IQR)), то напишем функцию, которая бы удаляла эти записи из датафрейма.\n",
     "(Остальные столбцы мы не трогаем, так как они по распределению слишком уж несимметричны, поэтому к ним применить данный метод не получится)"
    ]
@@ -81186,6 +81207,13 @@
     "fig.update_layout(height=1000, width=1000, showlegend=True)\n",
     "#fig.update_layout(legend=dict(title=dict(text='Legend')))\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P.S. если график не отображается, то копию можно посмотреть в папке plotly: https://github.com/lidarya/diplom/blob/main/plotly/4d-mc.png"
    ]
   },
   {
